Fix single-column protocol images on mobile iPhone

--- a/src/pages/SharedPages.module.css
+++ b/src/pages/SharedPages.module.css
@@ -240,3 +240,7 @@
     height: 150px;
   }
 }
+
+.knobologyGrid.shoulderUltrasoundGrid {
+  grid-template-columns: 1fr;
+}
